# Voice-Assistant

./: README.md  pyproject.toml
.github/workflows/: Run_Pytest.yml
tests/: first_test.py
voice_assistant/src/helper/: classes.py
voice_assistant/src/services/: database.py  main.py
